Fixed some text on presentation

--- a/index-es.html
+++ b/index-es.html
@@ -68,7 +68,7 @@
     <div class="landing-text">
       <h1 >Moscoso</h1>
       <h1 >Maximiliano</h1>
-      <h6>Unity Programmer | Programador Junior | Web Development</h6>
+      <h6>Programador en Unity | Programador Junior | Desarrollador Web</h6>
     </div>
   </header>
 
