Nav text english

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <nav class="top-nav">
       <ul class="nav-list">
         <li>
-          <a href="#home" class="nav-link" >Inicio</a>
+          <a href="#home" class="nav-link" >Home</a>
         </li>
         <li>
-          <a href="#about" class="nav-link" >Acerca</a>
+          <a href="#about" class="nav-link" >About me</a>
         </li>
         <li>
-          <a href="#languages" class="nav-link" >Lenguajes</a>
+          <a href="#languages" class="nav-link" >Languages</a>
         </li>
         <li>
           <a href="#portfolio" class="nav-link" >Portfolio</a>
@@ -57,10 +57,10 @@
           <a href="#services" class="nav-link" >Aptitudes</a>
         </li>
         <li>
-          <a href="#experience" class="nav-link" >Experiencias</a>
+          <a href="#experience" class="nav-link" >Experiences</a>
         </li>
         <li>
-          <a href="#contact" class="nav-link" >Contactame</a>
+          <a href="#contact" class="nav-link" >Contact me</a>
         </li>
       </ul>
     </nav>
