--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
   <section class="contact" id="contact">
     <div class="container">
       <div class="section-heading">
-        <h1 >Contactame</h1>
-        <h6 >Trabajemos juntos</h6>
+        <h1 >Contact me</h1>
+        <h6 >Let's work togheter</h6>
       </div>
       <form class="wrap" action="https://formspree.io/mdoewkzk" method="POST" data-aos="fade-up" data-aos-delay="300">
-        <label for="name" >Nombre:</label>
+        <label for="name" >Name:</label>
         <input type="text" id="name" name="name" placeholder="Enter your name" requiered>
 
         <label for="email" >Email:</label>
@@ -383,7 +383,7 @@
 					<option value="">All</option>
 				</select> -->
 
-        <label for="subject" >Mensaje:</label>
+        <label for="subject" >Message:</label>
         <textarea name="message" id="message" cols="10" rows="10"></textarea>
         <center><input type="submit" name="submit" value="Send"></center>
       </form>
