Starting new design of CV

--- a/index-es.html
+++ b/index-es.html
@@ -68,7 +68,7 @@
     <div class="landing-text">
       <h1 >Moscoso</h1>
       <h1 >Maximiliano</h1>
-      <h6>Programador en Unity | Programador Junior | Desarrollador Web</h6>
+      <h6>Programador en Unity | Programador Semi Senior | Desarrollador Web</h6>
     </div>
   </header>
 
@@ -126,7 +126,7 @@
         <li class="css">CSS <center >1 Años</center></li>
         <li class="php">PHP <center >1 Años</center></li>
         <li class="js">Javascript <center >1 Años</center></li>
-        <li class="csharp">c# <center >4 Años</center></li>
+        <li class="csharp">C# <center >4 Años</center></li>
         <li class="python">Python <center >2 Años</center></li>
         <li class="mysql">MySQL <center >2 Años</center></li>
         <li class="java">Java <center >3 Años</center></li>
