--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="landing-text">
       <h1 >Moscoso</h1>
       <h1 >Maximiliano</h1>
-      <h6>Unity Programmer | Junior Programmer | Web Development</h6>
+      <h6>Unity Programmer | Semi Senior Programmer | Web Development</h6>
     </div>
   </header>
 
@@ -128,7 +128,7 @@
         <li class="css">CSS <center >1 Years</center></li>
         <li class="php">PHP <center >1 Years</center></li>
         <li class="js">Javascript <center >1 Years</center></li>
-        <li class="csharp">c# <center >4 Years</center></li>
+        <li class="csharp">C# <center >4 Years</center></li>
         <li class="python">Python <center >2 Years</center></li>
         <li class="mysql">MySQL <center >2 Years</center></li>
         <li class="java">Java <center >3 Years</center></li>
