--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
                 <i class="fab fa-github"></i>
               </a>
             </li>
+            <li>
+              <a href="https://www.linkedin.com/in/maximiliano-moscoso-773155181/" class="icon-link">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
