Added TabInxed form

--- a/NewDesign/index.html
+++ b/NewDesign/index.html
@@ -13,6 +13,8 @@
 <body>
   <!-- Used for side bar menu -->
   <div id = "button"><i class = "fa fa-chevron-left"></i></div>
+
+
   <aside>
     <div class="social-media">
         <a href="https://www.youtube.com/channel/UCZKCL_YUKV4ComQ83yXDhvA?view_as=subscriber" class="icon-link">
@@ -29,6 +31,10 @@
         <a href="https://github.com/MoscosoMaximiliano" class="icon-link">
           <i class="fab fa-github fa-2x"></i>
         </a>
+
+        <a href="https://www.linkedin.com/in/maximiliano-moscoso-773155181/" class="icon-link">
+          <i class="fab fa-linkedin-2x"></i>
+        </a>
     </div>
     <div class="menu-selector">
 
@@ -37,7 +43,7 @@
 
   <main>
     <section>
-      Hello
+      MOSCOSO MAXIMILIANO
     </section>
 
     <section>
