--- a/index.html
+++ b/index.html
@@ -376,10 +376,10 @@
       </div>
       <form class="wrap" action="https://formspree.io/mdoewkzk" method="POST" data-aos="fade-up" data-aos-delay="300">
         <label for="name" >Name:</label>
-        <input type="text" id="name" name="name" placeholder="Enter your name" requiered>
+        <input type="text" id="name" name="name" placeholder="Enter your name" tabindex="1" requiered>
 
         <label for="email" >Email:</label>
-        <input type="email" id="email" name="_replyto" placeholder="Enter your email" requiered>
+        <input type="email" id="email" name="_replyto" placeholder="Enter your email" tabindex="2" requiered>
 
         <!-- <label for="service">Services:</label>
 				<select name="service" id="service">
@@ -389,8 +389,8 @@
 				</select> -->
 
         <label for="subject" >Message:</label>
-        <textarea name="message" id="message" cols="10" rows="10"></textarea>
-        <center><input type="submit" name="submit" value="Send"></center>
+        <textarea name="message" id="message" cols="10" rows="10" tabindex="3" requiered></textarea>
+        <center><input type="submit" name="submit" value="Send" tabindex="4"></center>
       </form>
       <!-- <div class="box-email">
 				<h1 class="text-email" data-aos="zoom-in" data-aos-delay="150">moscosomaximiliano@gmail.com</h1>
