Testing Visual Studio Code

--- a/NewDesign/index.html
+++ b/NewDesign/index.html
@@ -11,43 +11,49 @@
 
 </head>
 <body>
-  <!-- Used for side bar menu -->
-  <div id = "button"><i class = "fa fa-chevron-left"></i></div>
-
-
   <aside>
-    <div class="social-media">
-        <a href="https://www.youtube.com/channel/UCZKCL_YUKV4ComQ83yXDhvA?view_as=subscriber" class="icon-link">
-          <i class="fab fa-youtube fa-2x"></i>
+    <div class="page">
+      <div id="nav" class="nav collapsed">
+        <div class="logo" onclick="collapseNav()">
+          <i id="iconButtonNav" class = "fa fa-chevron-right"></i>
+        </div>
 
-        <a href="https://twitter.com/MoscosoMaxi" class="icon-link">
-          <i class="fab fa-twitter fa-2x"></i>
-        </a>
+        <div class="social-medias">
+          <span>Social Media</span><br>
+          <a href="https://www.youtube.com/channel/UCZKCL_YUKV4ComQ83yXDhvA?view_as=subscriber" class="icon-link">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a href="https://twitter.com/MoscosoMaxi" class="icon-link">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://www.instagram.com/maxi_moscoso/?hl=es-la" class="icon-link">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://github.com/MoscosoMaximiliano" class="icon-link">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/maximiliano-moscoso-773155181/" class="icon-link">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </div>
 
-        <a href="https://www.instagram.com/maxi_moscoso/?hl=es-la" class="icon-link">
-          <i class="fab fa-instagram fa-2x"></i>
-        </a>
-
-        <a href="https://github.com/MoscosoMaximiliano" class="icon-link">
-          <i class="fab fa-github fa-2x"></i>
-        </a>
-
-        <a href="https://www.linkedin.com/in/maximiliano-moscoso-773155181/" class="icon-link">
-          <i class="fab fa-linkedin-2x"></i>
-        </a>
-    </div>
-    <div class="menu-selector">
-
+        <div class="item"><i class="fas fa-address-card"><span>About Me</span></i></div>
+        <div class="item"><i class="fas fa-"><span>Knowledge</span></i></div>
+        <div class="item"><i class="fas fa-"><span>Portfolio</span></i></div>
+        <div class="item"><i class="fas fa-"><span>Aptitudes</span></i></div>
+        <div class="item"><i class="fas fa-"><span>Experiences</span></i></div>
+        <div class="item"><i class="fas fa-"><span>Contact Me</span></i></div>
+      </div>
     </div>
   </aside>
+  <!-- Used for side bar menu -->
 
-  <main>
     <section>
       MOSCOSO MAXIMILIANO
     </section>
 
     <section>
-
+        
     </section>
 
     <section>
@@ -65,7 +71,6 @@
     <section>
 
     </section>
-  </main>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script src="logic.js" charset="utf-8"></script>
