Fixed Skill section position of the items

--- a/index-es.html
+++ b/index-es.html
@@ -294,21 +294,21 @@
       </div>
       <div class="my-skills">
         <div class="skill wrap" data-aos="fade" data-aos-delay="150">
-          <div class="icon-container">
+          <div class="icon-container" style="position: relative; top: 14px; transition: none 0s ease 0s; cursor: move;">
             <i class="fas fa-code"></i>
           </div>
-          <h1 >Eficacia</h1>
-          <p >
+          <h1 style="position: relative; top: 21px; transition: none 0s ease 0s; cursor: move;">Eficiencia</h1>
+          <p style="position: relative; top: 25px; transition: none 0s ease 0s; cursor: move;">
             Orden en las tareas, cumpliendo en tiempo y forma, orientado a la calidad.
           </p>
         </div>
 
         <div class="skill wrap" data-aos="fade" data-aos-delay="300">
-          <div class="icon-container">
+          <div class="icon-container" style="position: relative; top: -12px; transition: none 0s ease 0s; cursor: move;">
             <i class="fas fa-chart-bar"></i>
           </div>
-          <h1 >Trabajo en equipo</h1>
-          <p >
+          <h1 style="position: relative; top: -3px; transition: none 0s ease 0s; cursor: move;">Trabajo en equipo</h1>
+          <p style="position: relative; top: 21px; transition: none 0s ease 0s; cursor: move;">
             Comunicación con el equipo para un mejor flujo de trabajo.
           </p>
         </div>
@@ -317,8 +317,8 @@
           <div class="icon-container">
             <i class="fas fa-code"></i>
           </div>
-          <h1 >Predisposición</h1>
-          <p >
+          <h1 style="font-size: 15px; position: relative; top: 8px; transition: none 0s ease 0s; cursor: move;">Predisposición</h1>
+          <p style="position: relative; top: 21px;">
             Búsqueda de aprendizaje, actualización y mejora constante en todos los ámbitos.
           </p>
         </div>
