--- a/index.html
+++ b/index.html
@@ -296,21 +296,21 @@
       </div>
       <div class="my-skills">
         <div class="skill wrap" data-aos="fade" data-aos-delay="150">
-          <div class="icon-container">
+          <div class="icon-container" style="position: relative; top: 14px; transition: none 0s ease 0s; cursor: move;">
             <i class="fas fa-code"></i>
           </div>
-          <h1 >Effectiveness</h1>
-          <p >
+          <h1 style="position: relative; top: 21px; transition: none 0s ease 0s; cursor: move;">Effectiveness</h1>
+          <p style="position: relative; top: 25px; transition: none 0s ease 0s; cursor: move;">
             Work organization, accomplishment in time and in the agreed way, quality oriented.
           </p>
         </div>
 
         <div class="skill wrap" data-aos="fade" data-aos-delay="300">
-          <div class="icon-container">
+          <div class="icon-container" style="position: relative; top: -12px; transition: none 0s ease 0s; cursor: move;">
             <i class="fas fa-chart-bar"></i>
           </div>
-          <h1 >Teamwork</h1>
-          <p >
+          <h1 style="position: relative; top: -3px; transition: none 0s ease 0s; cursor: move;">Teamwork</h1>
+          <p style="position: relative; top: 21px; transition: none 0s ease 0s; cursor: move;">
             Communication skills in group work for better fluency.
           </p>
         </div>
@@ -319,8 +319,8 @@
           <div class="icon-container">
             <i class="fas fa-code"></i>
           </div>
-          <h1 >Predisposition</h1>
-          <p >
+          <h1 style="font-size: 15px; position: relative; top: 8px; transition: none 0s ease 0s; cursor: move;">Predisposition</h1>
+          <p style="position: relative; top: 21px;">
             Always seeking knowledge to learn, constant improvement and upgrade in all ambits.
           </p>
         </div>
