--- a/index-es.html
+++ b/index-es.html
@@ -150,6 +150,28 @@
       <div class="portfolio-item">
         <div class="portfolio-description has-margin-right wrap" data-aos="fade-left" data-aos-delay="150">
           <center>
+            <iframe src="https://itch.io/embed/829553" height="167" width="552" frameborder="0">
+              <a href="https://nyxas.itch.io/midas-punch">Midas' Punch by Moscoso Maximiliano
+              </a>
+            </iframe>
+          </center>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right wrap" data-aos="fade-left" data-aos-delay="150">
+          <center>
+            <iframe src="https://itch.io/embed/775253" height="167" width="552" frameborder="0">
+              <a href="https://nyxas.itch.io/aventura">AVEntura by Moscoso Maximiliano
+              </a>
+            </iframe>
+          </center>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right wrap" data-aos="fade-left" data-aos-delay="150">
+          <center>
             <iframe src="https://itch.io/embed/615816" height="167" width="552" frameborder="0">
               <a href="https://nyxas.itch.io/carry-alive-it">Carry Alive It by Moscoso Maximiliano
               </a>
@@ -173,26 +195,6 @@
           <center>
             <iframe src="https://itch.io/embed/561124" height="167" width="552" frameborder="0">
               <a href="https://nyxas.itch.io/punch-repair-vr">Punch Repair VR by Moscoso Maximiliano</a>
-            </iframe>
-          </center>
-        </div>
-      </div>
-
-      <div class="portfolio-item">
-        <div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
-          <center>
-            <iframe src="https://itch.io/embed/495512" height="167" width="552" frameborder="0">
-              <a href="https://nyxas.itch.io/cardboard-words">Cardboard Words by Moscoso Maximiliano, Chinigami</a>
-            </iframe>
-          </center>
-        </div>
-      </div>
-
-      <div class="portfolio-item">
-        <div class="portfolio-description has-margin-right wrap" data-aos="fade-left" data-aos-delay="150">
-          <center>
-            <iframe src="https://itch.io/embed/488460" height="167" width="552" frameborder="0">
-              <a href="https://nyxas.itch.io/aseedthousandlives">A Seed Thousand Lives by Moscoso Maximiliano</a>
             </iframe>
           </center>
         </div>
@@ -334,7 +336,14 @@
       </div>
       <div class="timeline">
         <ul>
-          <li class="date wrap" data-date="2020 - Present" data-aos="fade-down" data-aos-delay="150">
+          <li class="date wrap" data-date="2021 - Present" data-aos="fade-down" data-aos-delay="150">
+            <h1>Programa "VERANO TDF"</h1>
+            <p >
+              Tallerista de "Construyamos un videojuego juntos"
+            </p>
+          </li>
+
+          <li class="date wrap" data-date="2020 - 2021" data-aos="fade-down" data-aos-delay="150">
             <h1>-</h1>
             <p >
               -
